# Backend

./: README.md  openapi.yaml
lambda/authorizer/sign-in-with-apple-authorizer/: Cargo.toml  README.md
lambda/authorizer/sign-in-with-apple-authorizer/src/: main.rs  values.rs
lambda/authorizer/sign-in-with-apple-authorizer/tests/: has_auth_header.json  missing_header.json  not_allowed.json  real_input.json
lambda/http/get-nonce-handler/: Cargo.toml
lambda/http/get-nonce-handler/src/: main.rs
lambda/http/login-handler/: Cargo.toml
lambda/http/login-handler/src/: main.rs
lambda/http/nonce-reset-handler/: Cargo.toml
lambda/http/nonce-reset-handler/src/: main.rs  response.rs
lambda/lib/authorizer-models/: Cargo.toml
lambda/lib/authorizer-models/src/: lib.rs  simple_authorizer_request.rs  simple_authorizer_response.rs
lambda/lib/authorizer-models/tests/: invalid_request.json  valid_full_request.json  valid_response.json
lambda/lib/sign-in-with-apple/: Cargo.toml
lambda/lib/sign-in-with-apple/src/: lib.rs
lambda/lib/snipsnap-lib/: Cargo.toml
lambda/lib/snipsnap-lib/src/: lib.rs
lambda/lib/snipsnap-lib/src/database/: error.rs  logins_table.rs  mod.rs  nonces_table.rs  users_table.rs
lambda/lib/snipsnap-lib/src/http/: http_error_response.rs  http_response_generator.rs  mod.rs
