[package]
name = "sign-in-with-apple-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# lambda_http = { version = "0.6.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.6.0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
toml = "0.5.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

authorizer-models = { path = "../../lib/authorizer-models" }
snipsnap-lib = { path = "../../lib/snipsnap-lib" }
sign-in-with-apple = { path = "../../lib/sign-in-with-apple" }
