[package]
name = "nonce-reset-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.6.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.6.1"
serde = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

snipsnap-lib = { path = "../../lib/snipsnap-lib" }
