[package]
name = "snipsnap-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "0.18.0"
lambda_http = { version = "0.6.1", default-features = false, features = ["apigw_http"] }
rand = "0.8"
serde = "1"
serde_json = "1"
thiserror = "1"
